tests/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-if-else-using-impl-3.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/ex1-return-one-existing-name-if-else-using-impl-3.rs:7:36
   |
LL |     if true { &self.field } else { x }
   |                                    ^ lifetime `'a` required
   |
help: add explicit lifetime `'a` to the type of `x`
   |
LL |   fn foo<'a>(&'a self, x: &'a i32) -> &i32 {
   |                            ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0621`.
